objects/Account.object
<CustomObject>
    <fields>
        <fullName>peer__Funds_Available_For_Investment__c</fullName>
        <formula>if( loan__Undeployed_Funds__c != 0,(loan__Undeployed_Funds__c  -  peer__Amount_In_Funding__c ),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount available for further investments.</inlineHelpText>
        <label>Uncommitted Funds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Funds_In_Queue__c</fullName>
        <label>Funds In Queue</label>
        <summarizedField>peer__Investment_Queue__c.peer__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>peer__Investment_Queue__c.peer__Invested__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>peer__Investment_Queue__c.peer__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>peer__Funds_Not_In_Queue__c</fullName>
        <formula>(loan__Undeployed_Funds__c - peer__Amount_In_Funding__c)- peer__Funds_In_Queue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funds Not In Queue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>peer__Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>peer__Investor_Status__c</fullName>
        <label>Investor Status</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>peer__IsActiveBorrower__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActiveBorrower</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__IsActiveInvestor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActiveInvestor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Maximum_Loan_Term__c</fullName>
        <label>Maximum Loan Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__National_Id__c</fullName>
        <label>National Id</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>peer__Nickname__c</fullName>
        <label>Nickname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Password__c</fullName>
        <label>Password</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Portfolio_Amount__c</fullName>
        <formula>loan__Undeployed_Funds__c + peer__Total_remaining_Investment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>peer__Portfolio_Generated_Per_Day__c</fullName>
        <label>Portfolio Generated Per Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Portfolio_Generated_Per_Hour__c</fullName>
        <label>Portfolio Generated Per Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Portfolio_Timestamp__c</fullName>
        <description>Timestamp of last generated portfolio</description>
        <label>Portfolio Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>peer__Sign_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicaztes if the video is already signed</description>
        <label>Sign Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Status__c</fullName>
        <label>Status(Borrower)</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>peer__Total_remaining_Investment__c</fullName>
        <label>Total remaining Investment</label>
        <summarizedField>peer__Credit_Band_Allocation__c.peer__Total_Investment_Order_Amount__c</summarizedField>
        <summaryForeignKey>peer__Credit_Band_Allocation__c.peer__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>peer__Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Verified_img__c</fullName>
        <formula>IF (peer__Verified__c, IMAGE(&quot;/img/msg_icons/confirm32.png&quot;, &quot;Verified&quot;),
     IMAGE(&quot;/img/msg_icons/warning32.png&quot;, &quot;Unverified&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Verified</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pepBiller_Code__c</fullName>
        <label>Biller Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pepIsDummyAccount__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Dummy Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pepOTP_Email__c</fullName>
        <label>OTP Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>pepOTP__c</fullName>
        <label>OTP</label>
        <length>6</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pep_Customer_Ip__c</fullName>
        <label>Customer Ip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>PC_EMAIL</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <sharedTo>
            <group>All_Internal_Users_Except_Mortgage</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Active_PAF_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CRM_Channel__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>CRM_Last_Visited_Date__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CRM_Target_YTD__c</columns>
        <columns>CRM_Achieved_YTD__c</columns>
        <columns>CRM_PAF_BDM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_PAF_BDM__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Business_Account</value>
        </filters>
        <label>All Active PAF Accounts</label>
        <sharedTo>
            <group>PAF_BDM</group>
            <group>PAF_Executive</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRM_Mtg_All_Active_Aggregators</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CRM_Mtg_Unique_Id__c</columns>
        <columns>CRM_Mtg_Channel__c</columns>
        <columns>CRM_Mtg_Accreditation_Date_Time__c</columns>
        <columns>CRM_Mtg_BDM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Mtg_Unique_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Business_Account</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Accreditation_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active Aggregators</label>
        <sharedTo>
            <group>CRM_Mortgage_Accreditation_Executives</group>
            <group>CRM_Mortgage_Accreditation_TL</group>
            <group>CRM_Mortgage_BDM_Executives</group>
            <group>CRM_Mortgage_Scenario_Executives</group>
            <group>CRM_Mortgage_Scenario_TL</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRM_Mtg_All_Aggregators</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CRM_Mtg_Channel__c</columns>
        <columns>CRM_Mtg_Accreditation_Status__c</columns>
        <columns>CRM_Mtg_Accreditation_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Mtg_Unique_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.ScCollection_Business_Account_CL,Account.Business_Account</value>
        </filters>
        <label>All Aggregators</label>
        <sharedTo>
            <group>CRM_Mortgage_Accreditation_Executives</group>
            <group>CRM_Mortgage_Accreditation_TL</group>
            <group>CRM_Mortgage_BDM_Executives</group>
            <group>CRM_Mortgage_Scenario_Executives</group>
            <group>CRM_Mortgage_Scenario_TL</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRM_Mtg_All_Inactive_Aggregators</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CRM_Mtg_Unique_Id__c</columns>
        <columns>CRM_Mtg_Channel__c</columns>
        <columns>CRM_Mtg_Accreditation_Date_Time__c</columns>
        <columns>CRM_Mtg_BDM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Mtg_Unique_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.ScCollection_Business_Account_CL,Account.Business_Account</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Accreditation_Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>All Inactive Aggregators</label>
        <sharedTo>
            <group>CRM_Mortgage_Accreditation_Executives</group>
            <group>CRM_Mortgage_Accreditation_TL</group>
            <group>CRM_Mortgage_Scenario_Executives</group>
            <group>CRM_Mortgage_Scenario_TL</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRM_Mtg_All_Retail_Aggregators</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CRM_Mtg_Unique_Id__c</columns>
        <columns>CRM_Mtg_Channel__c</columns>
        <columns>CRM_Mtg_Accreditation_Date_Time__c</columns>
        <columns>CRM_Mtg_BDM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Mtg_Unique_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.ScCollection_Business_Account_CL,Account.Business_Account</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Accreditation_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>Retail</value>
        </filters>
        <label>All Active Retail Aggregators</label>
        <sharedTo>
            <group>CRM_Mortgage_Accreditation_Executives</group>
            <group>CRM_Mortgage_Accreditation_TL</group>
            <group>CRM_Mortgage_BDM_Executives</group>
            <group>CRM_Mortgage_Scenario_Executives</group>
            <group>CRM_Mortgage_Scenario_TL</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRM_Mtg_All_WL_Aggregators</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CRM_Mtg_Unique_Id__c</columns>
        <columns>CRM_Mtg_Channel__c</columns>
        <columns>CRM_Mtg_Accreditation_Date_Time__c</columns>
        <columns>CRM_Mtg_BDM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Mtg_Unique_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.ScCollection_Business_Account_CL,Account.Business_Account</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Accreditation_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>White Label</value>
        </filters>
        <label>All Active WL Aggregators</label>
        <sharedTo>
            <group>CRM_Mortgage_Accreditation_Executives</group>
            <group>CRM_Mortgage_Accreditation_TL</group>
            <group>CRM_Mortgage_BDM_Executives</group>
            <group>CRM_Mortgage_Scenario_Executives</group>
            <group>CRM_Mortgage_Scenario_TL</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRM_Mtg_Records_Failed_to_Sync</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CRM_Mtg_Data_Push_Date_Time__pc</columns>
        <columns>CRM_Mtg_Data_Sync_Date_Time__pc</columns>
        <columns>CRM_Mtg_Data_Sync_Errors__pc</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Mtg_Data_Synced__pc</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Is_Data_Sync_Error__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Records Failed to Sync</label>
        <sharedTo>
            <group>CRM_Mortgage_Accreditation_Executives</group>
            <group>CRM_Mortgage_Accreditation_TL</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRM_My_Active_PAF_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CRM_Channel__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CRM_Key_account__c</columns>
        <columns>CRM_Target_MTD__c</columns>
        <columns>CRM_Achieved_MTD__c</columns>
        <columns>CRM_Monthly_VBI_Target__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Is_PAF_BDM__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CRM_Introducer_status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Business_Account</value>
        </filters>
        <label>My Active PAF Accounts</label>
        <sharedTo>
            <group>PAF_BDM</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRM_My_Key_PAF_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CRM_Channel__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CRM_Target_MTD__c</columns>
        <columns>CRM_Achieved_MTD__c</columns>
        <columns>CRM_Monthly_VBI_Target__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Is_PAF_BDM__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CRM_Introducer_status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Business_Account</value>
        </filters>
        <filters>
            <field>CRM_Key_account__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Key PAF Accounts</label>
        <sharedTo>
            <group>PAF_BDM</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRM_My_PAF_Accounts_Pending_Accreditation</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CRM_Channel__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>Phone1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Is_PAF_BDM__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CRM_Introducer_status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>My PAF Accounts Pending Accreditation</label>
        <sharedTo>
            <group>PAF_BDM</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
        <sharedTo>
            <group>All_Internal_Users_Except_Mortgage</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ScCollection_Collection_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PC_ADDRESS2_STATE</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.ScCollection_Person_Account_CL</value>
        </filters>
        <label>Collection Accounts</label>
        <sharedTo>
            <group>All_Internal_Users_Except_Mortgage</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Business Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>ScCollection_Business_Account_CL</fullName>
        <active>true</active>
        <label>Business Account (CL)</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CRMCheckIfEitherACLorACRisFilled</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(
NOT(ISPICKVAL($User.ScCollection_UserType__c,&apos;ESB User&apos;)),
NOT(ISBLANK(CRM_ACL__c)),
NOT(ISBLANK(CRM_ACR__c)), 
RecordType.DeveloperName = &apos;Business_Account&apos;),true,false)</errorConditionFormula>
        <errorMessage>Either of ACL/ACR can have value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_Deactivation_Reason_required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL(CRM_Introducer_status__c, &quot;Inactive&quot;) &amp;&amp;  ISPICKVAL(CRM_Deactivation_Reason__c, &quot;&quot;), true, false)</errorConditionFormula>
        <errorDisplayField>CRM_Deactivation_Reason__c</errorDisplayField>
        <errorMessage>Reason value is required for this status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_Mtg_CheckValidMFAAorFBAA</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISPICKVAL($User.ScCollection_UserType__c,&apos;ESB User&apos;)),
CRM_Mtg_MFAA__c = true,
CRM_Mtg_FBAA__c = true,
RecordType.DeveloperName = &apos;Business_Account&apos;)</errorConditionFormula>
        <errorMessage>Either of MFAA and FBAA can be checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_Mtg_Check_Accreditation_Status1</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
$Profile.Name == &apos;CRM Mortgage&apos;, 
ISCHANGED(CRM_Mtg_Accreditation_Status__c), 
ISPICKVAL(PRIORVALUE(CRM_Mtg_Accreditation_Status__c), &apos;Prospective&apos;), 
ISPICKVAL(CRM_Mtg_Change_Status_To__c,&apos;&apos;), 
NOT(ISCHANGED(CRM_Mtg_Change_Status_To__c)), 
NOT(ISPICKVAL(CRM_Mtg_Accreditation_Status__c,&apos;Not Proceeding&apos;)) 
)</errorConditionFormula>
        <errorMessage>Accreditation Status can only be changed from Prospective to Not Proceeding. To Activate/Deactivate click on the button on top.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_Mtg_Check_Accreditation_Status2</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
$Profile.Name == &apos;CRM Mortgage&apos;, 
ISCHANGED(CRM_Mtg_Accreditation_Status__c), 
ISPICKVAL(PRIORVALUE(CRM_Mtg_Accreditation_Status__c), &apos;Not Proceeding&apos;), 
NOT(ISPICKVAL(CRM_Mtg_Accreditation_Status__c,&apos;Prospective&apos;)) 
)</errorConditionFormula>
        <errorMessage>Accreditation Status can only be changed from Not Proceeding to Prospective.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_Mtg_Check_Accreditation_Status3</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
$Profile.Name == &apos;CRM Mortgage&apos;, 
ISCHANGED(CRM_Mtg_Change_Status_To__c), 
ISPICKVAL(CRM_Mtg_Accreditation_Status__c,&apos;Prospective&apos;), 
NOT(ISPICKVAL(CRM_Mtg_Change_Status_To__c,&apos;Active&apos;)) 
)</errorConditionFormula>
        <errorMessage>Accreditation Status can only be changed from Prospective to Active.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_Mtg_Check_Accreditation_Status4</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
$Profile.Name == &apos;CRM Mortgage&apos;, 
ISCHANGED(CRM_Mtg_Change_Status_To__c), 
ISPICKVAL(CRM_Mtg_Accreditation_Status__c,&apos;Active&apos;), 
ISPICKVAL(CRM_Mtg_Change_Status_To__c,&apos;Active&apos;) 
)</errorConditionFormula>
        <errorMessage>Accreditation Status can only be changed from Active to Inactive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_Mtg_Check_Accreditation_Status5</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
$Profile.Name == &apos;CRM Mortgage&apos;, 
ISCHANGED(CRM_Mtg_Change_Status_To__c), 
ISPICKVAL(CRM_Mtg_Accreditation_Status__c,&apos;Inactive&apos;), 
ISPICKVAL(CRM_Mtg_Change_Status_To__c,&apos;Inactive&apos;) 
)</errorConditionFormula>
        <errorMessage>Accreditation Status can only be changed from Inactive to Active.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_Mtg_Check_Accreditation_Status6</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
$Profile.Name == &apos;CRM Mortgage&apos;, 
ISCHANGED(CRM_Mtg_Change_Status_To__c), 
ISPICKVAL(CRM_Mtg_Accreditation_Status__c,&apos;Not Proceeding&apos;) 
)</errorConditionFormula>
        <errorMessage>Accreditation Status can only be changed from Not Proceeding to Prospective.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_Mtg_Check_Accreditation_Status7</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
$Profile.Name == &apos;CRM Mortgage&apos;, 
ISCHANGED(CRM_Mtg_Accreditation_Status__c), 
ISPICKVAL(CRM_Mtg_Change_Status_To__c,&apos;&apos;), 
NOT(ISCHANGED(CRM_Mtg_Change_Status_To__c)), 
OR(ISPICKVAL(PRIORVALUE(CRM_Mtg_Accreditation_Status__c), &apos;Active&apos;), 
ISPICKVAL(PRIORVALUE(CRM_Mtg_Accreditation_Status__c), &apos;Inactive&apos;) 
))</errorConditionFormula>
        <errorMessage>Accreditation Status can only be changed from Prospective to Not Proceeding. To Activate/Deactivate click on the button on top.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_Mtg_Check_Accreditation_Status8</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
$Profile.Name == &apos;CRM Mortgage&apos;, 
ISNEW(), 
NOT(ISPICKVAL(CRM_Mtg_Accreditation_Status__c,&apos;Prospective&apos;)) 
)</errorConditionFormula>
        <errorMessage>Accreditation Status can only be Prospective for New Broker.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_Mtg_Check_Channel</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name = &apos;CRM Mortgage&apos;, 
OR(ISPICKVAL(CRM_Mtg_Change_Status_To__c,&apos;Active&apos;),
ISPICKVAL(CRM_Mtg_Accreditation_Status__c,&apos;Active&apos;)),
ISPICKVAL(CRM_Mtg_Channel__c,&apos;&apos;)
)</errorConditionFormula>
        <errorMessage>Channel is mandatory for Mortgages Aggregator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_Mtg_Check_Mortgage_BDM</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name = &apos;CRM Mortgage&apos;, 
NOT(ISBLANK(ParentId)),
OR(ISBLANK(CRM_Mtg_BDM__c),
ISPICKVAL(CRM_Mtg_Aggregator_State__c,&apos;&apos;)))</errorConditionFormula>
        <errorMessage>Mortgage BDM and Aggregator State are mandatory for State Level Aggregator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_Mtg_Check_Role_Code</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name = &apos;CRM Mortgage&apos;, 
ISPICKVAL(CRM_Mtg_Channel__c,&apos;White Label&apos;),
OR(ISPICKVAL(CRM_Mtg_Change_Status_To__c,&apos;Active&apos;), 
ISPICKVAL(CRM_Mtg_Accreditation_Status__c,&apos;Active&apos;)),
ISBLANK(CRM_Mtg_Nextgen_Role_Code__c))</errorConditionFormula>
        <errorMessage>Nextgen Role Code is mandatory for Mortgages White Label Aggregator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_validation_to_check_future_date</fullName>
        <active>true</active>
        <description>this validation check if PI Insurance Expiry Date date is of future.</description>
        <errorConditionFormula>CRM_PI_Insurance_Expiry_Date__c &lt;= TODAY()</errorConditionFormula>
        <errorDisplayField>CRM_PI_Insurance_Expiry_Date__c</errorDisplayField>
        <errorMessage>Please select future date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRMtoCheckValidABN</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
NOT(ISPICKVAL($User.ScCollection_UserType__c,&apos;ESB User&apos;)),
NOT(ISBLANK(CRM_ABN__c)),
OR(NOT(ISNUMBER(CRM_ABN__c)),LEN(CRM_ABN__c) != 11))</errorConditionFormula>
        <errorDisplayField>CRM_ABN__c</errorDisplayField>
        <errorMessage>Please enter the valid ABN.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRMtoCheckValidACN</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
NOT(ISPICKVAL($User.ScCollection_UserType__c,&apos;ESB User&apos;)),
NOT(ISBLANK(CRM_ACN__c)),
OR(NOT(ISNUMBER(CRM_ACN__c)),LEN(CRM_ACN__c) != 9))</errorConditionFormula>
        <errorDisplayField>CRM_ACN__c</errorDisplayField>
        <errorMessage>Please enter the valid ACN.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckValidACRAndACL</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(
NOT(ISPICKVAL($User.ScCollection_UserType__c,&apos;ESB User&apos;)),
NOT(ISBLANK(CRM_ACL__c)),
NOT(ISNUMBER(CRM_ACL__c)),
RecordType.DeveloperName = &apos;Business_Account&apos;),true,
IF(AND(
NOT(ISPICKVAL($User.ScCollection_UserType__c,&apos;ESB User&apos;)),
NOT(ISBLANK(CRM_ACR__c)),
NOT(ISNUMBER(CRM_ACR__c)),
RecordType.DeveloperName = &quot;Business_Account&quot;),
true,false))</errorConditionFormula>
        <errorMessage>Please enter valid ACR or ACL</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Profiles_that_cannot_change_Account_Name</fullName>
        <active>true</active>
        <description>Prevents profiles from changing Account Name</description>
        <errorConditionFormula>AND(
  OR(
  ISCHANGED( FirstName ),
  ISCHANGED( LastName )
  ), 
 $Profile.Id = &apos;00e28000001kH7E&apos;
)</errorConditionFormula>
        <errorMessage>You do not have permission to modify the Account Name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Collect_Service_Fees_On_Check</fullName>
        <active>true</active>
        <description>We cannot select No Fees along with other values.</description>
        <errorConditionFormula>AND(INCLUDES(loan__Collect_Service_Fees_on__c, &apos;No Fees&apos;), OR(INCLUDES(loan__Collect_Service_Fees_on__c, &apos;Principal&apos;), INCLUDES(loan__Collect_Service_Fees_on__c, &apos;Interest&apos;), INCLUDES(loan__Collect_Service_Fees_on__c, &apos;Fees&apos;)))</errorConditionFormula>
        <errorMessage>In &quot;Collect Service Fees On&quot;, &quot;No Fees&quot; cannot be selected with other values.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Service_Fee_Principal_Check</fullName>
        <active>true</active>
        <description>User cannot select both Principal paid and principal remaining to calculate the service fee.</description>
        <errorConditionFormula>AND( INCLUDES(loan__Collect_Service_Fees_on__c, &apos;Principal&apos;) , INCLUDES(loan__Collect_Service_Fees_on__c, &apos;Principal Remaining&apos;) )</errorConditionFormula>
        <errorMessage>You can select either Principal or Principal Remaining but not both of them.</errorMessage>
    </validationRules>
</CustomObject>